# JSGFKit_Plus_Plus

./: .gitignore  BUILDING.md  CMakeLists.txt  Dockerfile.dev  Doxyfile  Makefile.am  Makefile.in  Makefile.mac  Makefile.unix  Makefile.windows  README.md  config.h.in  configure  configure.ac  devcontainer.json  jsgfkit.pc.in  jsgfkitxx.pc.in  main.cpp
.devcontainer/: devcontainer.json
examples/: ExpansionReplacementTest.cpp  ExpansionTypeTest.cpp  Matching.cpp  ParseAndOutputJSGF.cpp
examples/BatchTesting/: README.txt  test.sh
examples/BatchTesting/test_grammars/buckey/: sphinx_mode.gram
examples/BatchTesting/test_grammars/public_rules/: helloworld.gram
examples/ExpansionReplacementTest/: ExpansionReplacementTest.cpp  Makefile
examples/ExpansionTypeTest/: ExpansionTypeTest.cpp  Makefile
examples/Matching/: Makefile  Matching.cpp
examples/ParseAndOutputJSGF/: Makefile  ParseAndOutputJSGF.cpp
include/: alternativeset.h  expansion.h  grammar.h  kleenestar.h  matchinfo.h  matchresult.h  matchtracker.h  optionalgrouping.h  plusoperator.h  requiredgrouping.h  rule.h  rulereference.h  sequence.h  tag.h  token.h  unparsedsection.h
include/jsgfkitxx/: AlternativeSet.hpp  Expansion.hpp  Grammar.hpp  KleeneStar.hpp  MatchInfo.hpp  MatchResult.hpp  MatchTracker.hpp  OptionalGrouping.hpp  PlusOperator.hpp  RequiredGrouping.hpp  Rule.hpp  RuleReference.hpp  Sequence.hpp  Tag.hpp  Token.hpp  UnparsedSection.hpp
src/: AlternativeSet.cpp  Expansion.cpp  Grammar.cpp  KleeneStar.cpp  MatchResult.cpp  OptionalGrouping.cpp  PlusOperator.cpp  Sequence.cpp  Token.cpp1  UnparsedSection.cpp  alternativeset.cpp  expansion.cpp  grammar.cpp  kleenestar.cpp  matchinfo.cpp  matchresult.cpp  matchtracker.cpp  optionalgrouping.cpp  plusoperator.cpp  requiredgrouping.cpp  rule.cpp  rulereference.cpp  sequence.cpp  tag.cpp  token.cpp  unparsedsection.cpp
test/: CMakeLists.txt  ExpansionTypeTest.cpp  IsOptionalTest.cpp  Makefile  MatchingTest.cpp  ParseAndOutputJSGF.cpp
test/BatchTest/: optional_test.csv  rules_test.csv  test.sh
test/BatchTest/grammars/optional_testing/: bare_sequence.gram  lone_kleene.gram  lone_plus.gram  optional_alternate_set.gram  optional_parenthesis.gram  optional_parenthesis2.gram  optional_sequence.gram  required_grouping.gram  required_set.gram  sequence_plus.gram  sequence_with_tag.gram
test/BatchTest/grammars/public_rules/: hello.gram  lots_of_rules.gram  optional_at_beginning.gram  optional_at_end.gram
